--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -66,7 +66,7 @@
 
                 <li class="nav-item">
                     <a class="nav-link text-warning" th:href="@{/ofertas}">
-                        <i class="bi bi-fire me-1"></i> Ofertas
+                        <i class="bi bi-lightning-charge me-1"></i> CyberWOW <!-- Cambiar de "Ofertas" a "CyberWOW" -->
                     </a>
                 </li>
                 <li class="nav-item">
